Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72029

image: stylesheet is not recognized as a stylesheet for QPushButton

XMLWordPrintable

    • macOS, Windows
    • 03dc30acca4976c716c723ff46d503d35459b2a0 (qt/qtbase/5.14)

      In the Desinger view in Qt Creator, if I set an image stylesheet for QPushButton, it has no effect. For example "image: url(:/new/prefix1/me.jpg);". Using same resource as a border-image or background-image works ("border-image: url(:/new/prefix1/me.jpg);").

      Workaround solution is to add for example "border: 1;" coupled with the "image: " and it works just fine.

      Please find the attached example app which demonstrates this issue

        1. qtbug72029.jpg
          13 kB
          Friedemann Kleint
        2. qtbug72029.zip
          28 kB
          Friedemann Kleint
        3. untitled.zip
          31 kB
          Pekka Karjalainen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            pekarjal Pekka Karjalainen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes